- cancel-all-my-reservation fixed to work as cancel-all-user-reservations - only active reservations are now displayed on time bar - overlapping reservations on one copy for one user forbidden

--- a/entelib/media/stylesheets/style.css
+++ b/entelib/media/stylesheets/style.css
@@ -520,3 +520,11 @@ div.reserve_rent_form .negative_message {
   font-weight: bold;
   color: red;
 }
+div.positive_message {
+  font-weight: bold;
+  color: green;
+}
+div.warning {
+  font-weight: bold;
+  color: red;
+}
